plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sd20201'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.cloudinary:cloudinary-http44:1.29.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'commons-io:commons-io:2.15.1'


    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Environment variables
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

    // Email + Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Async support (đã có trong spring-boot-starter)
    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // excel
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.apache.poi:poi:5.2.3'

    // Ai của gemini
    // LangChain4j của gemini
    implementation platform("dev.langchain4j:langchain4j-bom:0.36.2")
    implementation "dev.langchain4j:langchain4j"
    implementation "dev.langchain4j:langchain4j-google-ai-gemini"

    //chat nhan vien = websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
}


tasks.named('test') {
	useJUnitPlatform()
}
